--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="col-md-12">
         <iframe src="https://skfashions.netlify.app" width="90%" height="400"></iframe>
     
-    <a href="kathir45.netlify.app" class="my-2"><button>See More&rarr;</button></a>
+    <a href="https://kathir45.netlify.app" class="my-2"><button>See More&rarr;</button></a>
     </div>
     </div>
     </section>
